--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 name: CI
 
-on:
+on: # event
   push:
     branches: [ "main" ]
   pull_request:
@@ -20,3 +20,6 @@ jobs:
         run: |
           node -v
           npm -v
+      - name: python command
+        run:
+          python --version
