--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
       - name: python command
         run: |
           python --version
-          
+
   run-github-actions:
     runs-on: ubuntu-latest
     steps:
@@ -35,3 +35,10 @@ jobs:
       - name: Log Greeting Time
         run: echo "${{ steps.greet.outputs.time }}"
 
+  pwd-ls:
+      runs-on: ubuntu-latest
+      steps:
+        - name: pwd-ls
+          run: |
+            pwd # 현재 경로 보는거
+            ls -al # 파일 리스트 출력
